--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -108,21 +108,21 @@
         </a>
         <!--Første opskrift-->
         <article class="col text-center">
-          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
+          <a href="foraar1.html"><img src="img/foraar/foraar1billede2.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
         </article>
         <!--Anden opskrift-->
         <article class="col text-center">
-          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
+          <a href="foraar2.html"><img src="img/foraar/foraar2billede4.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
         </article>
         <!--Tredje opskrift-->
         <article class="col text-center">
-          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
+          <a href="foraar3.html"><img src="img/foraar/foraar3ny.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
@@ -144,21 +144,21 @@
       </a>
       <!--Første opskrift-->
       <article class="col text-center">
-        <a href="sommer1.html"><img src="img/sommer1.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
+        <a href="sommer1.html"><img src="img/sommer/sommer2billede2.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
         <a href="sommer1.html">
           <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
         </a>
       </article>
       <!--Anden opskrift-->
       <article class="col text-center">
-        <a href="sommer2.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
+        <a href="sommer2.html"><img src="img/sommer/sommer2billede4.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
         <a href="sommer2.html">
           <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
         </a>
       </article>
       <!--Tredje opskrft-->
       <article class="col text-center">
-        <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Lilleskåls sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund"></a>
+        <a href="sommer3.html"><img src="img/sommer/sommer3pizza2.png" alt="Lilleskåls sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund"></a>
         <a href="sommer3.html">
           <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
         </a>
@@ -181,21 +181,21 @@
         </a>
         <!--Første opskrift-->
         <article class="col text-center">
-          <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt="Lilleskåls efterårsopskrift: Efterårssuppe med Hokkaido, gulerod og ingefær"></a>
+          <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede1ny.png" alt="Lilleskåls efterårsopskrift: Efterårssuppe med Hokkaido, gulerod og ingefær"></a>
           <a href="efteraar1.html">
             <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
           </a>
         </article>
         <!--Anden opskrift-->
         <article class="col text-center">
-          <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt="Lilleskåls efterårsopskrift: Efterårs-gnocchi med tomat, salvie og karamelliseret løg"></a>
+          <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede2.png" alt="Lilleskåls efterårsopskrift: Efterårs-gnocchi med tomat, salvie og karamelliseret løg"></a>
           <a href="efteraar2.html">
             <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
           </a>
         </article>
         <!--Tredje opskrift-->
         <article class="col text-center">
-          <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder"></a>
+          <a href="efteraar3.html"><img src="img/efteraar/efteraar3billede2.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder"></a>
           <a href="efteraar3.html">
             <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
           </a>
@@ -216,21 +216,21 @@
       </a>
       <!--Første opskrift-->
       <article class="col text-center">
-        <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt="Lilleskåls vintersopskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
+        <a href="vinter1.html"><img src="img/vinter/vinter1billede2.png" alt="Lilleskåls vintersopskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
         <a href="vinter1.html">
           <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
         </a>
       </article>
       <!--Anden opskrift-->
       <article class="col text-center">
-        <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt="Lilleskåls vintersopskrift: Vinter-pasta med grønkålssauce og citron"></a>
+        <a href="vinter2.html"><img src="img/vinter/vinter2billede1.png" alt="Lilleskåls vintersopskrift: Vinter-pasta med grønkålssauce og citron"></a>
         <a href="vinter2.html">
           <h3>Vinterpasta med grønkålssauce og citron</h3>
         </a>
       </article>
       <!--Tredje opskrift-->
       <article class="col text-center">
-        <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt="Lilleskåls vintersopskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
+        <a href="vinter3.html"><img src="img/vinter/vinter3billede3.png" alt="Lilleskåls vintersopskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
         <a href="vinter3.html">
           <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
         </a>
@@ -256,21 +256,21 @@
             <!-- Aktiv: bliver vist som første opskrift-->
             <article class="carousel-item active text-center">
               <a href="foraar1.html">
-                <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="Forår opskrift 1">
+                <img src="img/foraar/foraar1billede2.png" class="d-block w-100" alt="Forår opskrift 1">
                 <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="foraar2.html">
-                <img src="img/foraar/foraar2billede1.png" class="d-block w-100" alt="Forår opskrift 2">
+                <img src="img/foraar/foraar2billede4.png" class="d-block w-100" alt="Forår opskrift 2">
                 <h3>Forårs-orzo med tomater og citron</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="foraar3.html">
-                <img src="img/foraar/foraar3billede2.png" class="d-block w-100" alt="Forår opskrift 3">
+                <img src="img/foraar/foraar3ny.png" class="d-block w-100" alt="Forår opskrift 3">
                 <h3>Forårsnudler med radiser, porre og sesam</h3>
               </a>
             </article>
@@ -295,21 +295,21 @@
             <!-- Aktiv: bliver vist som første opskrift-->
             <article class="carousel-item active text-center">
               <a href="sommer1.html">
-                <img src="img/sommer/sommer1billede1.png" class="d-block w-100" alt="Sommer opskrift 1">
+                <img src="img/sommer/sommer2billede2.png" class="d-block w-100" alt="Sommer opskrift 1">
                 <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="sommer2.html">
-                <img src="img/sommer1.png" class="d-block w-100" alt="Sommer opskrift 2">
-                <h3>OSommer-tacos med ærtemos og grillede grøntsager</h3>
+                <img src="img/sommer/sommer2billede4.png" class="d-block w-100" alt="Sommer opskrift 2">
+                <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="sommer3.html">
-                <img src="img/sommer/sommer3billede1.png" class="d-block w-100" alt="Sommer opskrift 3">
+                <img src="img/sommer/sommer3pizza2.png" class="d-block w-100" alt="Sommer opskrift 3">
                 <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
               </a>
             </article>
@@ -334,21 +334,21 @@
             <!-- Aktiv: bliver vist som første opskrift-->
             <article class="carousel-item active text-center">
               <a href="efteraar1.html">
-                <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 1">
+                <img src="img/efteraar/efteraar1billede1ny.png" class="d-block w-100" alt="Efterår opskrift 1">
                 <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="efteraar2.html">
-                <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 2">
+                <img src="img/efteraar/efteraar2billede2.png" class="d-block w-100" alt="Efterår opskrift 2">
                 <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="efteraar3.html">
-                <img src="img/efteraar/efteraar1billede2.png" class="d-block w-100" alt="Efterår opskrift 3">
+                <img src="img/efteraar/efteraar3billede2.png" class="d-block w-100" alt="Efterår opskrift 3">
                 <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
               </a>
             </article>
@@ -373,21 +373,21 @@
             <!-- Aktiv: bliver vist som første opskrift-->
             <article class="carousel-item active text-center">
               <a href="vinter1.html">
-                <img src="img/vinter/vinter1.png" class="d-block w-100" alt="Vinter opskrift 1">
+                <img src="img/vinter/vinter1billede2.png" class="d-block w-100" alt="Vinter opskrift 1">
                 <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="vinter2.html">
-                <img src="img/vinter/vinter2billede2.png" class="d-block w-100" alt="Vinter opskrift 2">
+                <img src="img/vinter/vinter2billede1.png" class="d-block w-100" alt="Vinter opskrift 2">
                 <h3>Vinterpasta med grønkålssauce og citron</h3>
               </a>
             </article>
             <!-- Næste opskrift i karussel -->
             <article class="carousel-item text-center">
               <a href="vinter3.html">
-                <img src="img/vinter/vinter3billede1.png" class="d-block w-100" alt="Vinter opskrift 3">
+                <img src="img/vinter/vinter3billede3.png" class="d-block w-100" alt="Vinter opskrift 3">
                 <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
               </a>
             </article>
