--- a/index.html
+++ b/index.html
@@ -342,12 +342,8 @@
 
 
   <!-- ===========================
-       POP OP MED E-MAGASIN
+       POP OP MED TILMELDING AF E-MAGASIN 
        =========================== -->
-<!-- <a href="faellesskaal.html#emagasin-sektion" class="emagasin-popup">
- <img src="img/popup2.png" alt="">
-</a> -->
-
 <div class="emagasin-popup">
   <a href="faellesskaal.html#emagasin-sektion">
     <img src="img/popup2.png" alt="">
