--- a/sommer.html
+++ b/sommer.html
@@ -117,7 +117,7 @@
         <!--Opskrift 1-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
+          <a href="sommer1.html"><img src="img/sommer/sommer2billede2.png" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
           <a href="sommer1.html">
             <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
           </a>
@@ -125,7 +125,7 @@
         <!--Opskrift 2-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
+          <a href="sommer2.html"><img src="img/sommer/sommer2billede4.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
           <a href="sommer2.html">
             <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
           </a>
@@ -133,7 +133,7 @@
         <!--Opskrift 3-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Sommerpizza med sæsonens grønt og sprød bund"></a>
+          <a href="sommer3.html"><img src="img/sommer/sommer3pizza2.png" alt="Sommerpizza med sæsonens grønt og sprød bund"></a>
           <a href="sommer3.html">
             <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
           </a>
