--- a/foraar.html
+++ b/foraar.html
@@ -112,7 +112,7 @@
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
+          <a href="foraar1.html"><img src="img/foraar/foraar1billede2.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
@@ -120,7 +120,7 @@
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
+          <a href="foraar2.html"><img src="img/foraar/foraar2billede4.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
@@ -128,7 +128,7 @@
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
+          <a href="foraar3.html"><img src="img/foraar/foraar3ny.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
