--- a/vinter.html
+++ b/vinter.html
@@ -112,7 +112,7 @@
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt="Lilleskål vinteropskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
+          <a href="vinter1.html"><img src="img/vinter/vinter1billede2.png" alt="Lilleskål vinteropskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
           <a href="vinter1.html">
             <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
           </a>
@@ -120,7 +120,7 @@
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt="Lilleskål vinteropskrift: Vinterpasta med grønkålssauce og citron"></a>
+          <a href="vinter2.html"><img src="img/vinter/vinter2billede1.png" alt="Lilleskål vinteropskrift: Vinterpasta med grønkålssauce og citron"></a>
           <a href="vinter2.html">
             <h3>Vinterpasta med grønkålssauce og citron</h3>
           </a>
@@ -128,7 +128,7 @@
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <article class="col-12 col-sm-4 py-3">
-          <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt="Lilleskål vinteropskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
+          <a href="vinter3.html"><img src="img/vinter/vinter3billede3.png" alt="Lilleskål vinteropskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
           <a href="vinter3.html">
             <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
           </a>
