--- a/foraar.html
+++ b/foraar.html
@@ -137,6 +137,17 @@
     </div>
   </section>
 
+    <!-- ===========================
+       FÆLLESSKAB-AFSNIT - LINKER TIL FÆLLES-SKÅL SIDEN
+       =========================== -->
+       <div class=" position-relative faelles-bord">
+        <a class="falles-link" href="faellesskaal.html">
+          <picture class="d-flex justify-content-center">
+            <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
+            <img src="img/mobilfaellesskaal.png" alt="">
+          </picture>
+        </a>
+      </div>
 
   <!-- ===========================
        FOOTER
