--- a/sommer1.html
+++ b/sommer1.html
@@ -143,8 +143,7 @@
                 <li>1 pose feldsalat eller rocula</li>
                 <li>1 kugle burrata</li>
                 <li>Mandler til toppen</li>
-                <li>Godt madbrød
-                  <br>(se vores opskrift på <a href="#">focaccia</a> )
+                <li>Focaccia brød
               </ul>
             </div>
 
