--- a/sommer3.html
+++ b/sommer3.html
@@ -158,40 +158,41 @@
           <!--Fremgangsmåde-->
           <div class="col fremgangsmaade">
             <h3>Fremgangsmåde</h3>
-            <p>
+
               <strong>Forvarm ovnen</strong>
               <br>
-              Tænd ovnen efter anvisning på pizzadejen (typisk 220-250°C)..
-            </p>
+              <p>
+                Tænd ovnen efter anvisning på pizzadejen (typisk 220-250°C).
+              </p>
 
-            <br>
-
-            <p>
               <strong>Forbered grøntsager</strong>
-              <br>
-              Skær squash og peberfrugt i tynde skiver. Halvér cherrytomater og skær rødløg i tynde både.
-            </p>
+                <br>
+                <p>
+                  Skær squash og peberfrugt i tynde skiver. Halvér cherrytomater og skær rødløg i tynde både.
+                </p>
+               
 
-            <p>
               <strong>Saml pizzaen</strong>
               <br>
-              Læg bunden på bagepapir. Smør tomatsauce ud i et tyndt lag.
-            </p>
-            <p>SFordel grøntsager og ost jævnt ovenpå. Dryp med lidt olivenolie, og krydr med salt og peber.</p>
+              <p>
+                Læg bunden på bagepapir. Smør tomatsauce ud i et tyndt lag.
+              </p>
+              <p>
+                Fordel grøntsager og ost jævnt ovenpå. Dryp med lidt olivenolie, og krydr med salt og peber.
+              </p>
 
-            <p>
               <strong>Bag pizzaen</strong>
-              <br>
-              Bag midt i ovnen i 10-12 minutter, eller til osten er gylden og bunden sprød.
-            </p>
-
-            <br>
-
-            <p>
+              <p>
+                Bag midt i ovnen i 10-12 minutter, eller til osten er gylden og bunden sprød.
+              </p>
+              
               <strong>Server</strong>
-              <br>
-              Top med frisk basilikum
-            </p>
+              <p>
+                Top med frisk basilikum
+              </p>
+             <br>
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
 
 
           </div>
