--- a/efteraar1.html
+++ b/efteraar1.html
@@ -20,7 +20,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -169,25 +169,31 @@
               <br>
               Varm olie i en gryde og svits løg, hvidløg og ingefær kort. Tilsæt græskar og gulerødder, og steg 2-3 min.
             </p>
-            <br>
+
             <p>
               <strong>Kog suppen</strong>
               <br>
               Hæld vand/bouillon over, så det dækker grøntsagerne. Lad det simre under låg i ca. 20 minutter, til det
               hele er mørt.
             </p>
-            <br>
+
             <p>
               <strong>Blend og smag til</strong>
               <br>
               Blend suppen glat med en stavblender. Smag til med salt, peber og evt. lidt citron eller chili.
             </p>
-            <br>
+
             <p>
               <strong> Server</strong>
               <br>
               Server med creme fraiche, lidt ristede græskarkerner eller et stykke brød til.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+
           </div>
         </section>
       </section>
