--- a/efteraar3.html
+++ b/efteraar3.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -168,8 +168,6 @@
               hvidløg.
             </p>
 
-            <br>
-
             <p>
               <strong>Steg porrerne:</strong>
               <br>
@@ -178,8 +176,6 @@
               af panden.
             </p>
 
-            <br>
-
             <p>
               <strong>Steg gulerødderne</strong>
               <br>
@@ -187,20 +183,22 @@
               har bid.
             </p>
 
-            <br>
-
             <p>
               <strong>Vend sammen</strong>
               <br>
               Kom porrerne tilbage på panden og dryp med citronsaft. Smag til med salt, peber og evt. friske urter..
             </p>
 
-            <br>
-
             <p>
               <strong> Server</strong>
               Server som den er - eller med et stykke brød, lidt linser eller smuldret feta på toppen.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </div>
