--- a/foraar1.html
+++ b/foraar1.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -164,15 +164,12 @@
               Kog pastaen efter anvisning på pakken, og gem lidt kogevand til at justere konsistensen senere.
             </p>
 
-            <br>
-
             <p>
               <strong>Lav pestoen</strong>
               <br>
               Blend ramsløg, olie, kerner, citron og lidt salt.
             </p>
 
-            <br>
 
             <p>
               <strong>Forbered grøntsagerne</strong>
@@ -183,8 +180,6 @@
             <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de
               bliver let opvarmede og bløde.</p>
 
-            <br>
-
             <p>
               <strong>Samle retten</strong>
               <br>
@@ -192,13 +187,17 @@
               tør.
             </p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               <br>
               Server med ekstra pesto og evt. revet ost eller friskhakkede urter på toppen.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </section>
