--- a/foraar2.html
+++ b/foraar2.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -163,7 +163,6 @@
               Kog orzo efter anvisning på pakken. Gem lidt af kogevandet.
             </p>
 
-            <br>
             <p>
               <strong>Tilbered tomater</strong>
               <br>
@@ -171,8 +170,6 @@
             </p>
             <p>Steg dem på en pande med lidt olivenolie og presset hvidløg i 3-4 minutter, til de bliver bløde og
               saftige.</p>
-
-            <br>
 
             <p>
               <strong>Saml retten</strong>
@@ -182,12 +179,15 @@
             <p>Tilsæt lidt af pastavandet, hvis det virker tørt.</p>
             <p>Smag til med salt, peber og evt. ekstra citron.</p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               Top med revet parmesan og lidt ekstra olivenolie. Spis lun - gerne ude i solen.
             </p>
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </div>
