--- a/foraar3.html
+++ b/foraar3.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -165,8 +165,6 @@
               Kog nudlerne efter anvisning og skyl dem kort i koldt vand.
             </p>
 
-            <br>
-
             <p>
               <strong>Forbered grøntsager</strong>
               Skær porre i tynde ringe og radiser i fine skiver.
@@ -179,13 +177,16 @@
               Tilsæt nudler, sesamfrø, et skvæt soja og lidt citronsaft. Vend det hele sammen og smag til.
             </p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               <br>
               Anret i skåle og drys evt. med ekstra sesam og lidt citron på toppen.
             </p>
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </div>
