--- a/vinter1.html
+++ b/vinter1.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -165,8 +165,6 @@
               Skær porre i skiver og snit spidskål fint. Hak hvidløg.
             </p>
 
-            <br>
-
             <p>
               <strong>Karamellisér porren</strong>
               <br>
@@ -174,15 +172,11 @@
               læg dem til side.
             </p>
 
-            <br>
-
             <p>
               <strong>Lav saucen</strong>
               <br>
               Rør sojasauce, peanutbutter og hvidløg sammen. Tilsæt en smule varmt vand for at gøre den cremet.
             </p>
-
-            <br>
 
             <p>
               <strong>Steg kål</strong>
@@ -190,21 +184,23 @@
               Steg spidskål i samme pande i et par minutter - det skal stadig have lidt bid.
             </p>
 
-            <br>
-
             <p>
               <strong>Kog nudler</strong>
               <br>
               Kog nudlerne som anvist og vend dem direkte i panden med kålen. Tilsæt saucen og rør det hele godt sammen.
             </p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               <br>
               Top med den karamelliserede porre og drys evt. med sesamfrø og lidt citron.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </div>
