--- a/vinter2.html
+++ b/vinter2.html
@@ -20,7 +20,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -165,8 +165,6 @@
               Kog pastaen efter anvisning. Gem lidt af kogevandet.
             </p>
 
-            <br>
-
             <p>
               <strong>Lav grønkålssaucen</strong>
               <br>
@@ -177,21 +175,22 @@
             <p>Rør madlavningsfløden i i og blend det hele til en cremet sauce. Justér med lidt pastavand hvis den er
               for tyk.</p>
 
-            <br>
-
             <p>
               <strong>Vend sammen</strong>
               <br>
               Vend den varme pasta i saucen. Smag til med citronskal, lidt saft, salt og peber.
             </p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               <br>
               Top med lidt revet ost, solsikkekerner eller bare som den er - varm, cremet og grønt.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
 
           </div>
         </div>
