--- a/vinter3.html
+++ b/vinter3.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -164,8 +164,6 @@
               Kog byggen efter anvisning på pakken (ca. 20 min). Hæld vandet fra, når den er mør.
             </p>
 
-            <br>
-
             <p>
               <strong>Forbered grønt</strong>
               <br>
@@ -179,8 +177,6 @@
               peber.
             </p>
 
-            <br>
-
             <p>
               <strong>Tilsæt grønkål</strong>
               <br>
@@ -188,13 +184,16 @@
               med salt, peber og evt. et skvæt citron.
             </p>
 
-            <br>
-
             <p>
               <strong>Server</strong>
               <br>
               Top evt. med lidt revet ost, ristede solsikkekerner eller friske krydderurter.
             </p>
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
+            
           </div>
         </div>
       </div>
