--- a/efteraar2.html
+++ b/efteraar2.html
@@ -20,7 +20,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -167,8 +167,6 @@
                 det er blødt og gyldent.
               </p>
 
-              <br>
-
               <p>
                 <strong>Tilsæt tomat og hvidløg</strong>
                 <br>
@@ -176,9 +174,6 @@
                 varme i 5-7 minutter, til de er gyldne. Vend dem og tilsæt honning/sukker. Lad dem karamellisere kort og
                 tag dem af panden.
               </p>
-              <br>
-
-              <br>
 
               <p>
                 <strong>Steg gnocchi:</strong>
@@ -187,8 +182,6 @@
                 koge dem, men stegning giver ekstra lækkerhed).
               </p>
 
-              <br>
-
               <p>
                 <strong>Vend sammen</strong>
                 <br>
@@ -196,13 +189,17 @@
                 peber.
               </p>
 
-              <br>
-
               <p>
                 <strong> Server</strong>
                 <br>
                 Top med lidt parmesan, friske urter eller ristede kerner - og spis mens det er varmt og hyggeligt.
               </p>
+
+              <br>
+             
+              <h5>Tip:</h5>
+              <p class="tip-tekst">bla bla bla</p>
+              
             </div>
           </div>
         </div>
