--- a/sommer1.html
+++ b/sommer1.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -165,8 +165,6 @@
             <p>Skyl salaten og læg den i bunden af en skål eller fad.</p>
             <p>Top med de snittede grøntsager og jordbær.</p>
 
-            <br>
-
             <p>
               <strong>Rist mandlerne</strong>
               <br>
@@ -176,9 +174,12 @@
             <p>Hæld lidt god olivenolie over salaten som dressing</p>
             <p>Drys de hakkede mandler over som topping.</p>
 
-            <br>
-
             <p><strong>Server!</strong></p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
 
           </div>
         </div>
