--- a/sommer2.html
+++ b/sommer2.html
@@ -19,7 +19,7 @@
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -164,15 +164,11 @@
               Blend ærter med hvidløg, citron, olie, salt og peber - det må gerne være lidt groft.
             </p>
 
-            <br>
-
             <p>
               <strong>Forbered grønt</strong>
               Skær squash og tomat i skiver og steg dem kort på en varm pande.
             </p>
             <p>Snit spidskål fint og vend med lidt citronsaft og salt.</p>
-
-            <br>
 
             <p>
               <strong>Varm taco-skallerne</strong>
@@ -181,12 +177,15 @@
             <p>Skær tomaterne i halve og kom dem på panden sammen med kålene de sidste minutter af tilberedningen, så de
               bliver let opvarmede og bløde.</p>
 
-            <br>
-
             <p>
               <strong>Saml dine tacos</strong>
               Fyld hver taco med ærtemos, spidskål og grillede grøntsager. Top evt. med hakket persille.
             </p>
+
+            <br>
+             
+            <h5>Tip:</h5>
+            <p class="tip-tekst">bla bla bla</p>
 
 
           </div>
