--- a/efteraar1.html
+++ b/efteraar1.html
@@ -192,7 +192,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
+            <p class="tip-tekst">Gem græskarkernerne og rist dem sprøde med lidt olie og salt.
+              Supperester smager endnu bedre dagen efter - ellers kan du fryse det ned i portioner.</p>
 
           </div>
         </section>
