--- a/efteraar2.html
+++ b/efteraar2.html
@@ -198,8 +198,9 @@
               <br>
              
               <h5>Tip:</h5>
-              <p class="tip-tekst">bla bla bla</p>
-              
+              <p class="tip-tekst">Har du rester af tomater, løg eller gnocchi? Brug det i en tærte, pastaret eller varm salat dagen efter.
+                Overskydende salvie kan hakkes og fryses i olivenolie som små smags-“tern”.</p>
+
             </div>
           </div>
         </div>
