--- a/efteraar3.html
+++ b/efteraar3.html
@@ -197,8 +197,9 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst">Brug grøntsagerne som fyld i en wrap, omelet eller tærte dagen efter.
+              Overskydende porre kan snittes og fryses til suppe eller wok</p>
+
           </div>
         </div>
       </div>
