--- a/foraar1.html
+++ b/foraar1.html
@@ -196,8 +196,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst">Spidskål og tomater kan opbevares og bruges i en salat eller som fyld i en sandwich dagen efter</p>
+
           </div>
         </div>
       </section>
