--- a/foraar2.html
+++ b/foraar2.html
@@ -186,8 +186,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst">Cherrytomater: Brug resten i en salat, på rugbrød eller bag dem som snack</p>
+
           </div>
         </div>
       </div>
