--- a/foraar3.html
+++ b/foraar3.html
@@ -185,8 +185,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst">Nudler: Har du rester? De kan nemt steges op dagen efter med et æg og lidt grønt.</p>
+
           </div>
         </div>
       </div>
