--- a/sommer1.html
+++ b/sommer1.html
@@ -179,7 +179,7 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
+            <p class="tip-tekst">Hvis du har jordbær, agurk eller radiser tilovers, så brug dem dagen efter i en frisk smoothie (jordbær og agurk giver en lækker, mild smag sammen med citron og mynte).</p>
 
           </div>
         </div>
