--- a/sommer2.html
+++ b/sommer2.html
@@ -185,7 +185,7 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
+            <p class="tip-tekst">Brug resterne af squash og spidskål i en wokret eller pastasalat. Ærtemosen fungerer også som smørepålæg i sandwich eller som dip til grøntsagsstænger.</p>
 
 
           </div>
