--- a/sommer3.html
+++ b/sommer3.html
@@ -190,9 +190,9 @@
             </p>
 
              <br>
-             
+
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
+            <p class="tip-tekst">Grøntsagsrester kan bruges i en omelet, sandwich eller pastasalat dagen efter. Har du mozzarella til overs? Brug den i en caprese-salat med tomater og basilikum.</p>
 
 
           </div>
