--- a/vinter1.html
+++ b/vinter1.html
@@ -199,8 +199,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst">Gem overskydende porre og kål til suppe, wok eller omelet dagen efter.</p>
+
           </div>
         </div>
       </div>
