--- a/vinter2.html
+++ b/vinter2.html
@@ -190,7 +190,8 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
+            <p class="tip-tekst">Grønkålsstilkene kan koges og blendes med i saucen.
+              Har du sauce til overs? Brug den som spread i sandwich, i en tærte eller på pizza.</p>
 
           </div>
         </div>
