--- a/vinter3.html
+++ b/vinter3.html
@@ -192,8 +192,9 @@
             <br>
              
             <h5>Tip:</h5>
-            <p class="tip-tekst">bla bla bla</p>
-            
+            <p class="tip-tekst"> Brug rester som fyld i en grøntsagslasagne eller som madpakke dagen efter.
+              Grønkål kan fryses rå i mindre portioner og bruges direkte i varme retter.</p>
+
           </div>
         </div>
       </div>
