--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -205,7 +205,7 @@
 
 
   <!-- ===========================
-       ANMELDELSE FRA BRUGERE / FÆLLESSKAB-FØLELSEN
+       INSTAGRAM SEKTION
        =========================== -->
   <section class="custom-container my-5">
     <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px) -->
