--- a/kontakt.html
+++ b/kontakt.html
@@ -73,7 +73,7 @@
        BAGGRUND SOM ER ET PAPIR
        =========================== -->
 
-<main class="custom-container py-3">
+<main class="custom-container py-5">
   <div class="row align-items-start">
 
     <!-- Kontaktinfo + papir -->
@@ -133,11 +133,21 @@
   <!-- ===========================
        LOGO I BUNDEN
        =========================== -->
-<footer class="orange py-5">
-    <div class="logo-hero d-flex justify-content-center">
+
+<!--Footer mobil-version-->
+<footer class="py-5 d-block d-sm-none">
+  <div class="logo-hero d-flex justify-content-center ">
+      <img src="img/logovandmaling.png" alt="lilleskål logo">
+  </div>
+</footer>
+
+<!--Footer Andre skærmstørrelser fixed til bunden-->
+<footer class="py-5 fixed-bottom d-none d-sm-block">
+    <div class="logo-hero d-flex justify-content-center ">
         <img src="img/logovandmaling.png" alt="lilleskål logo">
     </div>
 </footer>
+
 
 
 
