--- a/omos.html
+++ b/omos.html
@@ -164,7 +164,7 @@
        =========================== -->
        <div class="emagasin-popup">
         <a href="faellesskaal.html#emagasin-sektion">
-          <img src="img/popup2.png" alt="">
+          <img src="img/popup2.png" alt="revet papir med teksten tilmeld e-magasin">
         </a>
         <button class="close-popup">✕</button>
       </div>
