--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
   <!--Eget ekstern stylesheet-->
   <link rel="stylesheet" href="stylesheet.css">
 
-
   <!--Bootstrap ikoner-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
-
 
 
   <!--Google Fonts-->
@@ -30,12 +27,11 @@
 
   <!--E-mail form-->
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script>
+  <script>
   (function() {
     emailjs.init("3LdleP9UAzHffR-I7");
   })();
-</script>
-
+  </script>
 
 </head>
 
@@ -106,6 +102,7 @@
         <img src="img/forsidemobil.png"
           alt="billede af de to kokke i køkkenet, en drikker vin den anden står med en peberkværn, på køkkenet er der pizza de er i gang med at lave">
       </picture>
+
       <!--Tekst & logo over baggrundsbillede-->
       <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
       <!--w-100 h-100: gør overlay lige så stort som billedet-->
@@ -113,15 +110,16 @@
       <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center
         align-items-center text-center">
         <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
-        <h4 class="call-to-action"><a href="alleopskrifter.html">
+
+        <!-- Call To Action knap -->
+        <div class="call-to-action"><a href="alleopskrifter.html">
             <picture>
               <source media="(min-width: 768px)" srcset="img/storknap.png" class="cta-img">
               <img src="img/lilleknap.png" alt="" class="cta-img">
             </picture>
-          </a></h4>
+          </a></div>
       </div>
     </div>
-
 
   </header>
 
@@ -154,7 +152,6 @@
   <!-- ===========================
        NUVÆRENDE SÆSON - JS
        =========================== -->
-
 
   <!--Oversigt over alle sæsoner, som kan komme på forsiden. UPS der bliver kun vist den nuværende sæson, som man er i-->
   <div class="orange py-5">
@@ -283,13 +280,13 @@
 
   <!--Collage m. billeder-->
   <section class="collage-container custom-container">
-    <img src="img/kurv.png" class="billede kurv" alt="">
-    <img src="img/foraarsbord.png" class="billede foraarsbord" alt="">
-    <img src="img/illustrationer/porre.png" class="billede asparges" alt="">
-    <img src="img/illustrationer/tomat.png" class="billede tomat" alt="">
-    <img src="img/foraarsmad.png" class="billede foraarsmad" alt="">
-    <img src="img/driver.png" class="billede driver" alt="">
-    <img src="img/vin.png" class="billede vin" alt="">
+    <img src="img/kurv.png" class="billede kurv" alt="indkøbskurv med danske råvarer">
+    <img src="img/foraarsbord.png" class="billede foraarsbord" alt="aftensmadsbord i den lune forårsaften">
+    <img src="img/illustrationer/porre.png" class="billede asparges" alt="vandmaling af porre">
+    <img src="img/illustrationer/tomat.png" class="billede tomat" alt="vandmaling af tomat">
+    <img src="img/foraarsmad.png" class="billede foraarsmad" alt="pastaret i et fad">
+    <img src="img/driver.png" class="billede driver" alt="drivhus med 3 piger der spiser mad og hygger">
+    <img src="img/vin.png" class="billede vin" alt="vinglas på bordet og blomster">
 
 
     <div class="custom-container d-flex justify-content-center align-items-center">
@@ -310,12 +307,10 @@
         <!--Kan skrive sin mail vha. js og få mail m. e-magasin-->
         <form id="kontaktForm">
 
-
           <label>Email</label>
           <input type="email" name="email" required>
            <button class="knap-forside my-2" type="submit">Send</button>
            <p id="status"></p>
-
 
         </form>
        
@@ -344,7 +339,7 @@
        =========================== -->
 <div class="emagasin-popup">
   <a href="faellesskaal.html#emagasin-sektion">
-    <img src="img/popup2.png" alt="">
+    <img src="img/popup2.png" alt="revet papir med teksten tilmeld e-magasin">
   </a>
   <button class="close-popup">✕</button>
 </div>
@@ -413,7 +408,7 @@
     </script>
 
 
-  <!--JavaScript benyttes til at navigationsbar: nuværende sæson øverst ved dropdown menu + tilmelding til e-magasin (mail)-->
+  <!--JavaScript benyttes til at navigationsbar: nuværende sæson øverst ved dropdown menu + tilmelding til e-magasin (mail) + nuværende sæson vises på forsiden-->
   <script src="script.js"></script>
 
 
