--- a/sommer1.html
+++ b/sommer1.html
@@ -143,7 +143,7 @@
                 <li>1 pose feldsalat eller rocula</li>
                 <li>1 kugle burrata</li>
                 <li>Mandler til toppen</li>
-                <li>Focaccia brød
+                <li>Focaccia brød</li>
               </ul>
             </div>
 
@@ -159,7 +159,6 @@
             <h3>Fremgangsmåde</h3>
             <p>
               <strong>Salaten</strong>
-              <br>
               Skyl og skær jordbær i halve, agurk i tynde skiver og radiser i skiver.
             </p>
             <p>Skyl salaten og læg den i bunden af en skål eller fad.</p>
