--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -218,7 +218,7 @@
         </video>        
 
 
-      <div class="col-lg-2 d-none d-lg-block insta-jordbaer position-absolute">
+      <div class="d-none d-lg-block insta-jordbaer position-absolute">
         <a href="https://www.instagram.com/lille_skaal/" target="_blank"><img src="img/insta-jordbaer.png" alt="Jordbær"></a>
       </div>
 
