--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -209,24 +209,25 @@
        =========================== -->
   <section class="custom-container my-5">
     <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px) -->
-    <div class="row g-md-3 g-lg-5">
-      <!--VIDEO-->
+    <div class="row">
 
-        <video class="offset-3 col-6 offset-md-0 col-md-4 offset-lg-1 col-lg-3 position-relative" controls>
+      <!--VIDEO-->
+      <!-- Kolonne: 6 på mobil (offset til venstre så tre kolonner på hver side), 5 på små skærme (≥576px), 3 på store skærme (≥992px)  -->
+        <video class=" col-6 offset-3 offset-sm-0 col-sm-5 col-lg-3" controls>
           <source src="lilleskaal-video-instagram.mp4" type="video/mp4">
           Din browser understøtter ikke video-tagget.
         </video>        
 
 
-      <div class="d-none d-lg-block insta-jordbaer position-absolute">
+      <div class="d-none d-lg-block insta-jordbaer col-md-1">
         <a href="https://www.instagram.com/lille_skaal/" target="_blank"><img src="img/insta-jordbaer.png" alt="Jordbær"></a>
       </div>
 
       <!-- ===========================
        DEL GLÆDEN ONLLINE - TEKST
        =========================== -->
-      <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) -->
-      <section class="col-md-8 col-12  offset-lg-2 col-lg-6 pt-5 pt-md-0">
+      <!-- Kolonne: 12 på mobil, 6 på små skærme (≥576px) -->
+      <section class="col-12 col-sm-6  pt-5 pt-md-0">
         <h2>Følg med på Instagram </h2>
         <p>Bliv en del af maduniverset – lige der, hvor du er. På vores Instagram deler vi inspirerende opskrifter, gode tips til madspild, og små historier fra fællesskabet, der gør hverdagen lidt sjovere.
           <br>
