--- a/kontakt.html
+++ b/kontakt.html
@@ -133,17 +133,9 @@
   <!-- ===========================
        LOGO I BUNDEN
        =========================== -->
-
-<!--Footer mobil-version-->
-<footer class="py-5 d-block d-sm-none">
-  <div class="logo-hero d-flex justify-content-center ">
-      <img src="img/logovandmaling.png" alt="lilleskål logo">
-  </div>
-</footer>
-
-<!--Footer Andre skærmstørrelser fixed til bunden-->
-<footer class="py-5 fixed-bottom d-none d-sm-block">
-    <div class="logo-hero d-flex justify-content-center ">
+<!--min-vh-100: min. højde = 100% af viewport heigt-->
+<footer class="py-5 min-vh-100 ">
+    <div class="logo-hero d-flex justify-content-center">
         <img src="img/logovandmaling.png" alt="lilleskål logo">
     </div>
 </footer>
